[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ui/background/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/theme/airbroomball_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/ui/menu/play/Play.gd" type="Script" id=3]
[ext_resource path="res://src/FadeEffect.tscn" type="PackedScene" id=4]

[node name="Play" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="FadeEffect" parent="." instance=ExtResource( 4 )]
node_path = NodePath("../VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -256.0
margin_right = 270.0
margin_bottom = 256.0

[node name="League" type="Button" parent="VBoxContainer"]
margin_right = 540.0
margin_bottom = 72.0
text = "TOURNAMENT"

[node name="Arcade" type="Button" parent="VBoxContainer"]
margin_top = 82.0
margin_right = 540.0
margin_bottom = 154.0
text = "ARCADE"

[node name="Single Match" type="Button" parent="VBoxContainer"]
margin_top = 164.0
margin_right = 540.0
margin_bottom = 236.0
text = "P_VS_PC"

[node name="OneVsOne" type="Button" parent="VBoxContainer"]
margin_top = 246.0
margin_right = 540.0
margin_bottom = 318.0
text = "P_VS_P"

[node name="BotVsBot" type="Button" parent="VBoxContainer"]
margin_top = 328.0
margin_right = 540.0
margin_bottom = 400.0
text = "B_VS_B"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 410.0
margin_right = 540.0
margin_bottom = 430.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 440.0
margin_right = 540.0
margin_bottom = 512.0
text = "GO_BACK"

[connection signal="pressed" from="VBoxContainer/League" to="." method="_on_League_pressed"]
[connection signal="pressed" from="VBoxContainer/Arcade" to="." method="_on_Arcade_pressed"]
[connection signal="pressed" from="VBoxContainer/Single Match" to="." method="_on_Single_Match_pressed"]
[connection signal="pressed" from="VBoxContainer/OneVsOne" to="." method="_on_OneVsOne_pressed"]
[connection signal="pressed" from="VBoxContainer/BotVsBot" to="." method="_on_BotVsBot_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
